--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-jwt": "^0.1.11",
     "hammerjs": "^2.0.8",
+    "ngx-cookie-service": "^11.0.2",
     "pdfmake": "^0.1.64",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.4",
